--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -73,6 +73,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://www.sonetjob.com/job/offer?id=bfe6fac003d2e82d&tc=jo-tw'>SonetJob | Offre d'emploi - Ressources Humaines - Business Analyst ? Business Intelligence Analysis Team</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.crelate.com/portal/teamreddog/job/4sjthr1ejcossmftihuxstib1e'>Business Intelligence Analyst | Current Opportunities</a></h5> 
 <p><span class="badge badge-light">Redmond, WA</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -85,7 +89,7 @@
 <p><span class="badge badge-light">Plymouth Meeting, PA, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698432042-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698432042-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -165,7 +169,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MicroStrategy1/743999698292463-business-intelligence-analyst'>MicroStrategy Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MicroStrategy1/743999698292463-business-intelligence-analyst'>MicroStrategy Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -226,7 +230,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">Wien, ?sterreich</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698051746--senior-data-engineer-business-intelligence-platform-berlin-m-f-d-'>Omio (Senior) Data Engineer / Business Intelligence Platform / Berlin (m / f / d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698051746--senior-data-engineer-business-intelligence-platform-berlin-m-f-d-'>Omio (Senior) Data Engineer / Business Intelligence Platform / Berlin (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -239,7 +243,7 @@ data modeling, ETL and report development and mentors others on the best?...</p>
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TrueNorthConsultingLLC/743999697988473-business-intelligence-analyst'>True North Consulting, LLC Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrueNorthConsultingLLC/743999697988473-business-intelligence-analyst'>True North Consulting, LLC Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lenexa, KS</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -251,7 +255,7 @@ data modeling, ETL and report development and mentors others on the best?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/indigo/jobs/1932595'>Job Application for Carbon Business Intelligence Analyst at Indigo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indigo/jobs/1932595'>Job Application for Carbon Business Intelligence Analyst at Indigo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... The Carbon Business Intelligence Analyst will bring structure and clear 
 governance to the collection and presentation of carbon data. We're looking for 
@@ -262,7 +266,7 @@ an?...</p>
 <p>Oct 16, 2019 ... As our Business Intelligence Analyst at Pollen, you will be part of the broader 
 agile and geographically-dispersed BI team, focused on facilitating a company?...</p>
 <hr/>
-<h5><a href='https://miacar.join.com/jobs/441760-business-intelligence-manager-f-m-d'>Job @ MIACAR (Z?rich): Business Intelligence Manag... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://miacar.join.com/jobs/441760-business-intelligence-manager-f-m-d'>Job @ MIACAR (Z?rich): Business Intelligence Manag... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -300,7 +304,7 @@ using?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/hkstrategies/job/oyvpbfwn'>Hill+Knowlton Strategies Careers - Coordenador de Business Intelligence - Comunica??o</a></h5> 
+<h5><a href='https://jobs.jobvite.com/hkstrategies/job/oyvpbfwn'>Hill+Knowlton Strategies Careers - Coordenador de Business Intelligence - Comunica??o</a></h5> 
 <p><span class="badge badge-light">Sao Paulo, Brazil</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -362,7 +366,7 @@ using?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/quip/jobs/1928260'>Job Application for Business Intelligence Analyst at quip</a></h5> 
+<h5><a href='https://boards.greenhouse.io/quip/jobs/1928260'>Job Application for Business Intelligence Analyst at quip</a></h5> 
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -472,16 +476,12 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999697727094-business-intelligence-engineer-profitable-saas-startup-120k-160k-equity-401-k-match-pto-flexible-work-schedule-plus-more-'>IT Pros Business Intelligence Engineer - Profitable SaaS Startup ($120K-$160K / Equity / 401(K) Match / PTO / Flexible Work Schedule / Plus More) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999697727094-business-intelligence-engineer-profitable-saas-startup-120k-160k-equity-401-k-match-pto-flexible-work-schedule-plus-more-'>IT Pros Business Intelligence Engineer - Profitable SaaS Startup ($120K-$160K / Equity / 401(K) Match / PTO / Flexible Work Schedule / Plus More) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
 <h5><a href='https://mcmakler.join.com/jobs/443800-senior-business-intelligence-engineer-m-f-x'>Job @ McMakler (Berlin): Senior Business Intellige... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-10-20</p>
-<hr/>
-<h5><a href='https://rheindata.join.com/jobs/447662-business-intelligence-berater-m-w-d'>Job @ rheindata (Cologne): Business Intelligence-B... | JOIN</a></h5> 
-<p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
 
