--- a/ios-developer.html
+++ b/ios-developer.html
@@ -56,11 +56,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/5kq8g19qwg39kpshpj3zadheuc'>Lead iOS Developer up to $200,000 + Remote | CardinalHire</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/5kq8g19qwg39kpshpj3zadheuc'>Lead iOS Developer up to $200,000 + Remote | CardinalHire</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698292809-ios-developer'>Devoteam iOS developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698292809-ios-developer'>Devoteam iOS developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Copenhagen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -84,11 +84,11 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://social.icims.com/job/Principal-iOS-Developer-Job-Waltham-MA-02453-US-24231137.html?isd_source=twitter&isd_pub=130877&pubId=147'>Principal iOS Developer | iCIMS Social Distribution</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://social.icims.com/job/Principal-iOS-Developer-Job-Waltham-MA-02453-US-24231137.html?isd_source=twitter&isd_pub=130877&pubId=147'>Principal iOS Developer | iCIMS Social Distribution</a></h5> 
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999697957599-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999697957599-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Somerville United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -125,7 +125,7 @@
 <p>Oct 6, 2019 ... As a Senior iOS Developer you will need to be: An expert in using Xcode, Git and 
 building continuous integration pipelines; Demonstrable mastery in the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999697629039-ios-developer-senior-principal-senior-principal-position-'>Cermati.com IOS Developer (Senior, Principal, & Senior Principal Position) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999697629039-ios-developer-senior-principal-senior-principal-position-'>Cermati.com IOS Developer (Senior, Principal, & Senior Principal Position) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -135,7 +135,7 @@ building continuous integration pipelines; Demonstrable mastery in the?...</p>
 company behind the world's fastest payments processing network. We are a 
 vehicle?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Undabot/743999694809482-ios-developer'>Undabot iOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Undabot/743999694809482-ios-developer'>Undabot iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -205,7 +205,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verisure.avature.net/careers/JobDetail/iOS-Developer/141'>iOS Developer - Careers Portal</a></h5> 
+<h5><a href='https://verisure.avature.net/careers/JobDetail/iOS-Developer/141'>iOS Developer - Careers Portal</a></h5> 
 <p><span class="badge badge-light">Malm?</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -233,15 +233,15 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697384194-senior-ios-developer'>TrophyRoom Pte Ltd Senior IOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697384194-senior-ios-developer'>TrophyRoom Pte Ltd Senior IOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914841'>Job Application for iOS Developer(eCommerce Platform)  at Algorythma</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914841'>Job Application for iOS Developer(eCommerce Platform)  at Algorythma</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=ncMG9Mw4'>ServiceNow Careers - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=ncMG9Mw4'>ServiceNow Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -253,7 +253,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://devjobs.at/job/36023777108'>iOS Mobile Developer - devjobs.at</a></h5> 
+<h5><a href='https://devjobs.at/job/36023777108'>iOS Mobile Developer - devjobs.at</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -289,7 +289,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bookingcom1/743999697200252-ios-developer'>Booking.com IOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bookingcom1/743999697200252-ios-developer'>Booking.com IOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Shanghai Shanghai</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -313,7 +313,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">South Africa</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.amazon.jobs/en/jobs/943656/sde-ios-developer'>SDE - iOS Developer - Job ID: 943656 | Amazon.jobs</a></h5> 
+<h5><a href='https://www.amazon.jobs/en/jobs/943656/sde-ios-developer'>SDE - iOS Developer - Job ID: 943656 | Amazon.jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
@@ -325,7 +325,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/revolut/dbdc7705-7056-46fd-90f0-d9b34794fc56'>Revolut - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/revolut/dbdc7705-7056-46fd-90f0-d9b34794fc56'>Revolut - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -357,7 +357,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Senior iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
-<h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Our purpose is to make it easy to find good quality, trusted providers by using 
 latest technologies and machine learning algorithms. We have served 5 million?...</p>
@@ -378,7 +378,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ChewiCreative/743999695685808-senior-ios-developer'>Chewi Creative Senior iOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ChewiCreative/743999695685808-senior-ios-developer'>Chewi Creative Senior iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -421,7 +421,7 @@ automotive?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Sep 23, 2019 ... Apply online for the job of iOS Lead Developer at Prototype Interactive.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/1DACCC12C7'>Semios - Jobs: JavaScript Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/1DACCC12C7'>Semios - Jobs: JavaScript Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 23, 2019 ... Apply online for the job of JavaScript Developer at Semios.</p>
 <hr/>
