Senior Software Engineer -  .Net C# - Wallet.Services     . Hobsons Careers - Sr. Software Engineer (Naviance). Aera Technology - Software Engineer in Test (Automation). Web Software Engineer in Chicago (Remote), Illinois - Chat Now Live with a Recruiter (Job #8115287) | FlashRecruit. realtor.com - Sr. Software Engineer – Nurturing Platform. realtor.com - Senior Software Engineer   (Platform and Monetization). realtor.com - Senior Software Engineer. realtor.com - Software Engineer - Back-end. realtor.com - Senior Software Engineer – Managed Service Markets. Wealthfront - Senior Software Engineer- Distributed Applications. Software Developer (Entry Level) - Konrad Group - Career Page.       Senior Software Engineer (m/f/x) - Focus Frontend - Searchmetrics GmbH     . Nine Backend Software Engineer | SmartRecruiters. Cyber Software Engineer I #0500 job at Stratus Solutions in Fort Belvoir, VA, powered by JobScore. Software Developer - TS/SCI with Polygraph #0424 job at Stratus Solutions in Columbia, MD, powered by JobScore. Senior Software Engineer - TS/SCI with Polygraph #0449 job at Stratus Solutions in McLean, VA, powered by JobScore. Job Application for Staff Software Engineer - Data Services at InVision. Hobsons Careers - Sr. Software Engineer (Naviance). Senior Software Engineer - Akamai Careers. Hobsons Careers - Sr. Software Engineer (Naviance).  Silicon Labs Careers - Embedded Software Engineer. Glidewell Dental Careers - Software Engineer II. Impinj Careers - Senior Software Engineer, ItemEncode. Frontend Software Engineer. Farfetch Careers - Senior Software Engineer. Splunk Careers - Software Engineer - Backend, C++. Software Engineer/Full Stack Developer - IntelliPro Group Inc. - Career Page. Progress Careers - Senior Software Engineer - .NET. Senior Software Engineer - Interactions at Benefits Data Trust. Software Engineer - Application Reliability at Benefits Data Trust. Real-Time Software Developer (m/f/d) in Manching - Orizon GmbH. Hobsons Careers - Sr.

--- a/software.html
+++ b/software.html
@@ -39,8 +39,18 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/aeratechnology/cfcc4de9-c90a-42d7-8a8e-ac38de6dc00d'>Aera Technology - Software Engineer in Test (Automation)</a></h5> 
+<h5><a href='https://walletservices.recruitee.com/o/senior-software-engineer-net-c'>
+      Senior Software Engineer -  .Net C# - Wallet.Services
+    </a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/hobsons/job/o1Wsbfwk'>Hobsons Careers - Sr. Software Engineer (Naviance)</a></h5> 
+<p><span class="badge badge-light">Arlington, VA Arlington</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/aeratechnology/cfcc4de9-c90a-42d7-8a8e-ac38de6dc00d'>Aera Technology - Software Engineer in Test (Automation)</a></h5> 
+<p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://flashrecruit.com/jobs/8115287'>Web Software Engineer in Chicago (Remote), Illinois - Chat Now Live with a Recruiter (Job #8115287) | FlashRecruit</a></h5> 
@@ -149,11 +159,11 @@
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://benefits-data-trust.breezy.hr/p/443b14dedf5c-software-engineer-application-reliability'>Software Engineer - Application Reliability at Benefits Data Trust</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/443b14dedf5c-software-engineer-application-reliability'>Software Engineer - Application Reliability at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.orizon.de/de/job/real-time-software-developer-m-f-d-manching-11985'>Real-Time Software Developer (m/f/d) in Manching - Orizon GmbH</a></h5> 
+<h5><a href='https://www.orizon.de/de/job/real-time-software-developer-m-f-d-manching-11985'>Real-Time Software Developer (m/f/d) in Manching - Orizon GmbH</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -223,11 +233,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/newrelic/job/ocZ6afwb'>New Relic Careers - Lead Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/newrelic/job/ocZ6afwb'>New Relic Careers - Lead Software Engineer</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698427755-software-developer'>Verisk Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698427755-software-developer'>Verisk Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lehi, UT, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -251,7 +261,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
+<h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -267,7 +277,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=o0jy9fwK&__jvst=Employee&__jvsd=sTRQZgwk&__jvsc=Twitter&bid=nqbKnMwZ'>Schneider Electric NAM Careers - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=o0jy9fwK&__jvst=Employee&__jvsd=sTRQZgwk&__jvsc=Twitter&bid=nqbKnMwZ'>Schneider Electric NAM Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -331,7 +341,7 @@
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://optelgroup.applytojob.com/apply/uTqcKdkTE8/Senior-Software-Engineer'>Senior Software Engineer - Optel Group - Career Page</a></h5> 
+<h5><a href='http://optelgroup.applytojob.com/apply/uTqcKdkTE8/Senior-Software-Engineer'>Senior Software Engineer - Optel Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -363,7 +373,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409357-sr-software-engineer-web-developer'>Adam Kay Group Sr. Software Engineer - Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409357-sr-software-engineer-web-developer'>Adam Kay Group Sr. Software Engineer - Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -375,7 +385,7 @@
 <p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=ocdSafwb&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nAtvnMwc'>MORI Associates, Inc. Careers - Embedded Real-Time Software Engineer - NASA - autonomous air vehicles</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=ocdSafwb&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nAtvnMwc'>MORI Associates, Inc. Careers - Embedded Real-Time Software Engineer - NASA - autonomous air vehicles</a></h5> 
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -383,7 +393,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PointsInternational/743999698406792-technical-lead-software-engineering'>Points International Technical Lead, Software Engineering | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PointsInternational/743999698406792-technical-lead-software-engineering'>Points International Technical Lead, Software Engineering | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -407,41 +417,45 @@
 <p><span class="badge badge-light">London, United Kingdom London, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vgs/7eed1a68-cf63-4b1a-9bc1-2c20793fd704'>Very Good Security - Junior Software Engineer</a></h5> 
-<p><span class="badge badge-light">Lviv, Ukraine</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://columbususa.zohorecruit.com/recruit/ViewJob.na?digest=lK1VdUafFt6UWhqebSEml3bzBM.YePt0TtgtpcD5IcY-&embedsource=Twitter'>Software Engineer</a></h5> 
+<h5><a href='https://www.workable.com/j/499584536A'>iOS Software Engineer - Campinas - QuintoAndar</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-29</p>
+<p>Oct 17, 2019 ... iOS Software Engineer responsibilities at QuintoAndar. Develop and maintain 
+QuintoAndar end-user applications for iOS; Write clean code and use code linting
+?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
-<p><span class="badge badge-light">Columbia, Maryland</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o98pbfwB&__jvst=Employee&__jvsd=sFU2Kgw6&__jvsc=Twitter&bid=nGO6mMwd'>Benefitfocus Careers - Sr. Software Engineer - AI</a></h5> 
-<p><span class="badge badge-light">Charleston, South Carolina</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Vichara/743999698374386-software-engineer-lead-salesforce'>Vichara Software Engineer Lead - Salesforce | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Los Angeles, CA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999698373143-backend-software-engineer-go-developer-'>Greppy Systems Backend Software Engineer (Go Developer) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://loxo.co/job/279986?t=1572352968957'>Software Engineer - LAMP Stack - TIER4 GROUP</a></h5> 
-<p><span class="badge badge-light">Atlanta, GA</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://www.cv-library.co.uk/job/211098088/Lead-Software-Engineer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Lead Software Engineer | CV-Library.co.uk | 211098088</a></h5> 
+<h5><a href='https://www.workable.com/j/94A1E34B4B'>Senior Software Engineer- Front End - Bevi</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-29</p>
+<p>Oct 18, 2019 ... As a Senior Software Engineer- Front End, your guidance and input drive 
+architecture and functionality decisions. Whether you prefer providing mentorship 
+to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.womenwhocode.com/jobs/5444?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Software Engineer - Red Hat | Women Who Code</a></h5> 
+<h5><a href='https://www.workable.com/j/BA0562F41F'>Senior Software Engineer - Bevi</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-29</p>
+<p>Oct 18, 2019 ... Bevi is an environmental company that aims to entirely eliminate disposable 
+bottles and cans through smart beverage machines that purify water and create?...</p>
+<hr/>
+<h5><a href='https://apply.workable.com/quadpay/j/E460655066/'>Software Engineer - QuadPay</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 22, 2019 ... About QuadPay:QuadPay is one of the fastest growing fintech start-ups, that 
+allow shoppers to buy anywhere, at anytime - and pay in 4 interest-free, 
+automatic?...</p>
+<hr/>
+<h5><a href='https://apply.workable.com/ratesetter/j/9761067716/'>Junior Software Engineer (Full Stack) - RateSetter</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 16, 2019 ... We are currently recruiting at all levels from engineer to Technical Leads. Our 
+engineers love building things, solving complex challenges, learning new?...</p>
+<hr/>
+<h5><a href='https://apply.workable.com/forthemakers/j/9EF5E3CB9B/'>Senior Software Engineer - For The Makers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... About For The MakersFor The Makers is building the digital infrastructure to 
+improve and invent tools for makers: and we're starting with the uber-knitters of 
+the?...</p>
+<hr/>
+<h5><a href='https://apply.workable.com/tradegecko/j/2B99A67AA1/'>Software Engineer - Payments - TradeGecko Pte. Ltd.</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Our dynamic, passionate & resilient team is looking for an equally talented 
+Engineer to be part of a close-knit team to build and support a software that is 
+vital to?...</p>
 <hr/>
 
 
